style/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
* {
  font-family: 'Montserrat', sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

main {
  display: grid;
  grid-template: auto 1fr auto / 1fr 4fr;
  min-height: 100vh;
}

/*Header Styles*/

header {
  grid-column: 2 / span 3;
  display: grid;
  grid-template-rows: 1fr 2fr;
  padding: 15px 20px 0 15px;
  z-index: 1;
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
}

.icon {
  justify-self: end;
  width: 30px;
  height: 30px;
}

.upper-header {
  grid-row: 1;
  display: grid;
  grid-template-columns: 1fr 15fr 1fr 1fr 3fr;
  place-items: center;
}
.upper-header p,
.greetings p {
  font-weight: 600;
}
.greetings h2 {
  font-size: 1.3rem;
  font-weight: 700;
}
.greetings {
  justify-self: start;
}

.icon.search {
  padding-right: 10px;
}
#search {
  justify-self: start;
  width: 70%;
  height: 30px;
  border: none;
  outline: none;
  border-radius: 15px;
  background-color: rgb(225, 232, 240);
  color: #0f172a;
  padding: 0.5rem;
}

.profile-img {
  border-radius: 50%;
  width: 80px;
  height: 80px;
}
.profile-img.tiny {
  width: 50px;
  height: 50px;
  justify-self: end;
}
.lower-header {
  grid-row: 2;
  display: grid;
  grid-template-columns: 1fr 4fr repeat(3, 1fr);
  place-items: center;
}
.btn {
  text-align: center;
  width: 70%;
  height: 40px;
  border: none;
  outline: none;
  border-radius: 20px;
  background-color: #e9c46a;
  color: white;
  font-weight: 600;
  cursor: pointer;
  transition: background-color 0.3s, transform 0.2s;
}

.btn:hover {
  background-color: #f4a261; /* Cambia el color de fondo al pasar el ratón */
  transform: scale(1.05); /* Agranda ligeramente el botón */
}
/*Aside Menu*/

aside {
  background-color: #287271;
  grid-row-start: 1;
  grid-row-end: 4;
  display: grid;
  grid-template-rows: 1fr 1.5fr 2fr;
  row-gap: 30px;
  color: white;
  padding-left: 20px;
  align-content: start;
}

.logo-img path {
  fill: white;
}

.main-links li img,
.setting-links li img {
  width: 30px;
  height: 30px;
  filter: invert(100%);
  margin-right: 10px;
}

.logo {
  display: grid;
  grid-template-columns: auto auto;
  align-items: center;
  column-gap: 10px;
}

.logo p,
.main-links ul li a,
.setting-links ul li a {
  font-weight: 700;
  font-size: 15px;
  padding: 5px;
}
.logo p {
  font-size: 30px;
}

.main-links li a,
.setting-links ul li a {
  display: grid;
  grid-template-columns: max-content max-content;
  align-items: center;
  column-gap: 10px;
}

/*Main Content*/
section {
  padding: 20px;
  grid-row-start: 2;
  grid-row-end: 4;
  background-color: rgb(225, 232, 240);
  display: grid;
  grid-template-columns: 70% 30%;
  grid-template-rows: auto 1fr auto 1fr;
  column-gap: 20px;
}

section h2 {
  padding-bottom: 10px;
  font-weight: 700;
  font-size: 1.3rem;
}
hr {
  height: 0;
  border: 1px solid darkgray;
}
.card-container {
  grid-column: 1;
  grid-row: 2 / span 4;
  display: grid;
  grid-template-columns: repeat(auto-fit, clamp(30%, 400px, 500px));
  grid-template-rows: repeat(auto-fit, min(180px));
  gap: 20px;
}
.card {
  border-left: 8px solid #f4a261;
}

.announcement-container {
  grid-row-start: 2;
  grid-column-start: 2;
  margin-bottom: 40px;
  margin-right: 20px;
  display: grid;
}
.announcement {
  padding: 10px 0;
}
.announcement-container h3 {
  font-weight: 700;
  font-size: 1rem;
  margin-bottom: 10px;
}
.trending-container {
  display: grid;
  gap: 15px;
  margin-bottom: 40px;
  margin-right: 20px;
}

.trending-profile {
  display: grid;
  grid-template: 1fr 1fr / auto 1fr;
  column-gap: 15px;
}
.trending-profile h3 {
  font-size: 1rem;
  font-weight: 500;
}
.trending-profile p {
  color: gray;
}

.trending-profile img {
  grid-row: 1 / span 2;
  cursor: pointer;
}
.card,
.announcement-container,
.trending-container {
  border-radius: 8px;
  background-color: white;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  padding: 20px;
  font-size: 0.85rem;
}

/*Cards*/

.card {
  display: grid;
  grid-template: auto 1fr auto / 1fr auto auto auto;
  gap: 10px;
  transition: box-shadow 0.3s ease;
}
.card:hover {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
}
.card a {
  font-size: 1rem;
  font-weight: 700;
}
.card a:hover {
  text-decoration: underline;
}

.card p {
  grid-row: 2;
  grid-column: 1/ 4;
}
.card-icon {
  height: 20px;
  width: 20px;
  grid-row: 3;
  cursor: pointer;
  transition: scale 0.3s ease;
}
.card-icon:hover {
  transform: scale(1.2);
}
.card-icon.first {
  grid-column: 2;
}
.card-icon.second {
  grid-column: 3;
}
.card-icon.third {
  grid-column: 4;
}

/*Animation*/

.bell::before,
.bell::after {
  content: '';
  background: white;
  display: block;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  height: 2.17px;
}
.bell::before {
  top: 100%;
  width: 20px;
}
.bell::after {
  top: calc(100% + 4px);
  width: 7px;
}
/*container main styling*/
.notification {
  background: transparent;
  border: none;
  padding: 15px 15px;
  border-radius: 50px;
  cursor: pointer;
  transition: 300ms;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}
/*notifications number with before*/
.notification::before {
  content: '1';
  color: white;
  font-size: 10px;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background-color: red;
  position: absolute;
  right: 8px;
  top: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

/*container animations*/
.notification:hover > .bell-container {
  animation: bell-animation 650ms ease-out 0s 1 normal both;
}
@keyframes bell-animation {
  20% {
    transform: rotate(15deg);
  }

  40% {
    transform: rotate(-15deg);
    scale: 1.1;
  }
  60% {
    transform: rotate(10deg);
    scale: 1.1;
  }
  80% {
    transform: rotate(-10deg);
  }
  0%,
  100% {
    transform: rotate(0deg);
  }
}

